split services (need to resolve nginx logging yet)
